[package]
name = "tspf"
version = "0.2.0"
authors = ["1crcbl <1crcbl@protonmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A parser for TSPLIB format"
repository = "https://github.com/1crcbl/tspf-rs.git"

keywords = ["tsp", "parser"]
categories = ["parser-implementations"]

[dependencies]
getset = "0.1.1"